WIP send image coords over socket

--- a/Arm/vision/CMakeLists.txt
+++ b/Arm/vision/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
-project(SocketsDemo)
+project(vision)
 set(CMAKE_CXX_STANDARD 20)
 set(COMPILE_DEFINITIONS -O2 -Wall)
-add_executable(main src/main.cpp)
+find_package(OpenCV REQUIRED)
+add_executable(vision src/main.cpp)
+target_link_libraries(vision ${OpenCV_LIBS})
