--- a/Arm/vision/CMakeLists.txt
+++ b/Arm/vision/CMakeLists.txt
@@ -5,3 +5,4 @@ set(COMPILE_DEFINITIONS -O2 -Wall)
 find_package(OpenCV REQUIRED)
 add_executable(vision src/main.cpp)
 target_link_libraries(vision ${OpenCV_LIBS})
+target_include_directories(vision PRIVATE /home/esl/Documents/CC3501/Arm/drivers)
