--- a/Arm/embedded/rp2040_node/CMakeLists.txt
+++ b/Arm/embedded/rp2040_node/CMakeLists.txt
@@ -33,15 +33,18 @@ if(CrossCompiling)
     pico_sdk_init()
     
     include_directories(${ProjectDir}/drivers/mcp2515)
-    
+    include_directories(${ProjectDir}/drivers/LSM9DS1_driver)
+
     add_executable(rp2040_node
         src/rp2040_node.cpp
         ${ProjectDir}/drivers/mcp2515/mcp2515.cpp   
+        ${ProjectDir}/drivers/LSM9DS1_driver/LSM9DS1_driver.cpp   
     )
     target_sources(rp2040_node 
         PUBLIC
         src/rp2040_node.cpp
         ${ProjectDir}/drivers/mcp2515/mcp2515.cpp   
+        ${ProjectDir}/drivers/LSM9DS1_driver/LSM9DS1_driver.cpp  
     )
     target_include_directories(rp2040_node
         PUBLIC 
